# hackaton-UNIBG-repo

./: .dockerignore  .gitignore  EXAMPLE.env  LICENCE  README.md  pyproject.toml  settings.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: tutorial.md
notebooks/: kpi_v1.ipynb  loading_data.ipynb  openRouter_LangGraph.ipynb  test_different_data.ipynb  test_inference.ipynb  test_v1.ipynb  test_v3.ipynb  test_v4.ipynb
output/notebook_v4/: metadata.json  monitoring_report.json  synthetic_data.json
output/notebook_v4_full/: metadata.json  synthetic_data.json
src/: inference.py  inference_different_data.py  inferencev2.py  inferencev3 copy.py  inferencev4.py  monitoring.py  monitoringv1.py  run_monitoring.py
